raffia/tests/error/scss/at-rule/function/varargs-at-start.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but found `$var`
  ┌─ varargs-at-start.scss:1:25
  │
1 │ @function test($rest...,$param) {}
  │                         ^^^^^^


